[gd_scene load_steps=14 format=3 uid="uid://c6hdeaefjygl6"]

[ext_resource type="Script" uid="uid://cboysnpuaywcv" path="res://scripts/charting.gd" id="1_4opbx"]
[ext_resource type="Texture2D" uid="uid://by7cg2bl0ig0o" path="res://assets/happy.png" id="2_4opbx"]
[ext_resource type="Script" uid="uid://brcd6fqo2bp2h" path="res://scripts/edit_create.gd" id="2_umwmv"]
[ext_resource type="Script" uid="uid://dw5sk8y5e8n5k" path="res://scripts/chart_list.gd" id="3_injk5"]
[ext_resource type="Texture2D" uid="uid://4w8heerdtghr" path="res://assets/Gre.png" id="3_rfu2s"]
[ext_resource type="Script" uid="uid://cyon2rylyapft" path="res://scripts/camera_2d.gd" id="3_toh77"]
[ext_resource type="Texture2D" uid="uid://ba7kub3sy6a0b" path="res://assets/Blu.png" id="4_lq02i"]
[ext_resource type="Texture2D" uid="uid://j6rai6hylpoh" path="res://assets/Yel.png" id="5_lq02i"]
[ext_resource type="Texture2D" uid="uid://1e7uybs2s0kr" path="res://assets/Arrow.png" id="6_snw3p"]
[ext_resource type="Script" uid="uid://bchm4vyy1tifr" path="res://scripts/chart_editor.gd" id="8_injk5"]

[sub_resource type="InputEventAction" id="InputEventAction_1anln"]
pressed = true

[sub_resource type="Shortcut" id="Shortcut_4opbx"]
events = [SubResource("InputEventAction_1anln")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umwmv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Charting" type="Node"]
script = ExtResource("1_4opbx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(800, 500)
editor_draw_limits = true
script = ExtResource("3_toh77")

[node name="EditCreate" type="Node2D" parent="."]
script = ExtResource("2_umwmv")

[node name="Create" type="Button" parent="EditCreate"]
offset_left = 300.0
offset_top = 200.0
offset_right = 1300.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 60
shortcut = SubResource("Shortcut_4opbx")
text = "[A] Create"

[node name="Edit" type="Button" parent="EditCreate"]
offset_left = 300.0
offset_top = 600.0
offset_right = 1300.0
offset_bottom = 800.0
theme_override_font_sizes/font_size = 60
text = "[S] Edit
"

[node name="ChartList" type="Node2D" parent="."]
position = Vector2(0, 1000)
script = ExtResource("3_injk5")

[node name="Chart" type="Node2D" parent="ChartList"]
visible = false
position = Vector2(300, 425)

[node name="Background" type="ColorRect" parent="ChartList/Chart"]
offset_right = 1000.0
offset_bottom = 150.0
color = Color(0.20392157, 0.20392157, 0.20392157, 1)

[node name="Album" type="Sprite2D" parent="ChartList/Chart"]
position = Vector2(75, 75)
texture = ExtResource("2_4opbx")

[node name="Name" type="Label" parent="ChartList/Chart"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 40.0
offset_right = 589.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Tutorial"

[node name="EditChart" type="Button" parent="ChartList"]
offset_left = 1500.0
offset_top = 435.0
offset_right = 1608.0
offset_bottom = 543.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("3_rfu2s")

[node name="PlayChart" type="Button" parent="ChartList"]
offset_left = 1500.0
offset_top = 505.0
offset_right = 1608.0
offset_bottom = 613.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("4_lq02i")

[node name="TopButton" type="Button" parent="ChartList"]
offset_left = 550.0
offset_top = 50.0
offset_right = 1050.0
offset_bottom = 150.0
text = "Up"

[node name="BottomButton" type="Button" parent="ChartList"]
offset_left = 550.0
offset_top = 850.0
offset_right = 1050.0
offset_bottom = 950.0
text = "Down"

[node name="ChartEditor" type="Node2D" parent="."]
position = Vector2(0, 2000)
script = ExtResource("8_injk5")

[node name="NoteBlock" type="Node2D" parent="ChartEditor"]
position = Vector2(197, 350)

[node name="BGNumber" type="ColorRect" parent="ChartEditor/NoteBlock"]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.2784314, 0.2784314, 0.2784314, 1)
metadata/_edit_use_anchors_ = true

[node name="BGNote" type="ColorRect" parent="ChartEditor/NoteBlock"]
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
color = Color(0.3647059, 0.2784314, 0.2784314, 1)
metadata/_edit_use_anchors_ = true

[node name="BGDir" type="ColorRect" parent="ChartEditor/NoteBlock"]
offset_top = 200.0
offset_right = 100.0
offset_bottom = 300.0
color = Color(0.2784314, 0.2784314, 0.2784314, 1)
metadata/_edit_use_anchors_ = true

[node name="Note" type="Sprite2D" parent="ChartEditor/NoteBlock"]
position = Vector2(10, 110)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_lq02i")
offset = Vector2(50, 50)

[node name="Sprite2D2" type="Sprite2D" parent="ChartEditor/NoteBlock"]
position = Vector2(0, 200)
texture = ExtResource("6_snw3p")
offset = Vector2(50, 50)

[node name="Number" type="Label" parent="ChartEditor/NoteBlock"]
offset_right = 100.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ChartEditor/NoteBlock"]
offset_right = 100.0
offset_bottom = 100.0
theme_override_styles/normal = SubResource("StyleBoxFlat_umwmv")

[node name="Button2" type="Button" parent="ChartEditor/NoteBlock"]
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
theme_override_styles/normal = SubResource("StyleBoxFlat_umwmv")

[node name="Button3" type="Button" parent="ChartEditor/NoteBlock"]
offset_top = 200.0
offset_right = 100.0
offset_bottom = 300.0
theme_override_styles/normal = SubResource("StyleBoxFlat_umwmv")

[node name="Button" type="Button" parent="ChartEditor"]
offset_left = 750.0
offset_top = 350.0
offset_right = 850.0
offset_bottom = 650.0
text = "+"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="EditCreate/Create" to="EditCreate" method="_on_create_pressed"]
[connection signal="pressed" from="EditCreate/Edit" to="EditCreate" method="_on_edit_pressed"]
[connection signal="pressed" from="ChartList/EditChart" to="ChartList" method="_on_edit_chart_pressed"]
[connection signal="pressed" from="ChartList/PlayChart" to="ChartList" method="_on_play_chart_pressed"]
[connection signal="pressed" from="ChartList/TopButton" to="ChartList" method="_on_top_button_pressed"]
[connection signal="pressed" from="ChartList/BottomButton" to="ChartList" method="_on_bottom_button_pressed"]
